# reddit-demo

./: .dockerignore  .gitmodules  Cargo.toml  README.md
community-oracle/: Cargo.toml  README.md  config.json
community-oracle/src/: community_oracle.rs  config.rs  lib.rs  main.rs  requests.rs  responses.rs  signer.rs  zksync.rs
deploy/: Dockerfile-community-oracle  Dockerfile-service-provider  kube.yaml
docs/: api_description.md  bootstrapping.md  workflow_spec.md
js/: README.md  package.json
js/src/: index.ts  provider.ts  types.ts
js/tests/: service-provider-test.ts
service-provider/: Cargo.toml  README.md  config.json
service-provider/docs/: api_description.md
service-provider/src/: config.rs  main.rs  oracle.rs  requests.rs  responses.rs  service_provider.rs  subscription_keeper.rs  utils.rs  zksync.rs
service-provider/src/database/: memory_db.rs  mod.rs  types.rs
service-provider/src/zksync/: mod.rs  rest_client.rs  rpc_client.rs
