[package]
name = "service_provider"
version = "0.1.0"
authors = ["Igor Aleksanov <popzxc@yandex.ru>"]
edition = "2018"

[dependencies]
actix-web = "3.0.0-alpha.3"
actix-rt = "1.1.1"
tokio = { version = "0.2", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
chrono = "0.4"
reqwest = "0.10"
log = "0.4.8"

serde = "1.0.90"
serde_derive = "1.0.90"
serde_json = "1.0.0"

zksync_testkit = { package = "testkit", path = "../zksync-dev/core/testkit", version = "0.1.0" }
zksync_models = { package = "models", path = "../zksync-dev/core/models", version = "0.0.1" }
community_oracle = { path = "../community-oracle", version = "0.1.0" }
